--- a/templates/template_wedding_victor/index.html
+++ b/templates/template_wedding_victor/index.html
@@ -164,7 +164,7 @@
         <div class="d-lg-none">
             <img class="image-gallery" src="images/gallery-image-mobile-16.png">
         </div>
-        <a class="text-brown view-click">
+        <a class="view-click"  href="javascript:void(0)">
             View Gallery >
         </a>
         <a class="text-brown view-close hide">
@@ -552,7 +552,7 @@
                                 <a target="__blank" href="invitation.pdf" class="button-download mx-3">
                                     Download invitation
                                 </a>
-                                <input type="submit" value="Submit >" class="text-white submit-btn"  data-toggle="modal" data-target="#form-submit">
+                                <a href="#" class="submit-btn"  data-toggle="modal" data-target="#form-submit">Submit ></a>
                             </div>
                         </div>
                     </div>
