--- a/templates/template_wedding_1/style-wedding-1.css
+++ b/templates/template_wedding_1/style-wedding-1.css
@@ -337,6 +337,11 @@
       letter-spacing: 0.8px;
       box-shadow: 0px 4px 2px 0px rgba(0,0,0,0.1);
       border: none;
+      transition: all .3s;
+    }
+    .button-cyan:hover{
+      background: #fff;
+      color: #84AFA1;
     }
       #step-increment{
         position: absolute;
