--- a/templates/template_wedding_10/style-wedding-10.css
+++ b/templates/template_wedding_10/style-wedding-10.css
@@ -142,13 +142,13 @@
 		font-size: 18px !important;
 		line-height: 40px !important;
 		color: #ECBA9F !important;
+		transition: all .3s;
 	}
 	nav ul li a:hover,
 	nav ul li a:active,
 	nav ul li a.active{
 		padding-bottom: 5px;
 		border-bottom: 2px solid #ECBA9F;
-		transition: .0s;
 	}
 	@media screen and (max-width: 846px) {
 		#mobile-menu{
