--- a/templates/template_wedding_2/style-wedding-2.css
+++ b/templates/template_wedding_2/style-wedding-2.css
@@ -174,6 +174,10 @@
 		border: none;
 		border-bottom: 2px solid #C7B198;
 		background: none;
+		transition: all .3s;
+	}
+	.rsvp-section .form-group .button-submit:hover{
+		color: #C7B198;
 	}
 	.img-mobile{
 		object-fit: cover;
@@ -205,6 +209,9 @@
 		color: #284c5b;
 		border-bottom: 2px solid #c7b198;
 		font-family: "Overpass Bold";
+	}
+	.accomodation .button-location:hover{
+		color: #c7b198;
 	}
 	.accomodation .garis{
 		position: absolute;
