--- a/templates/template_wedding_9/style-wedding-9.css
+++ b/templates/template_wedding_9/style-wedding-9.css
@@ -30,6 +30,9 @@
 		font-family: "Spartan Light";
 		color: #C0A28A;
 	}
+	a{
+		transition: all .3s;
+	}
 	h1{font-size: 72px !important;}
 	h2{font-size: 70px !important;}
 	h3{font-size: 60px !important;}
@@ -119,6 +122,7 @@
 		font-size: 15px !important;
 		letter-spacing: 0.96px;
 		color: #808285;
+		transition: all .3s;
 	}
 	nav ul li a:hover,
 	nav ul li a:active,
@@ -126,7 +130,7 @@
 		padding-bottom: 5px;
 		color: #808285;
 		border-bottom: 2px solid #808285;
-		transition: .0s;
+		transition: all .3s;
 	}
 	@media screen and (max-width: 846px) {
 		nav{
