--- a/templates/template_wedding_10/index.html
+++ b/templates/template_wedding_10/index.html
@@ -511,6 +511,7 @@
                             <a role="button" id="step-increment" class="btn btn-default" aria-label="add 1" aria-labelledby="step-increment label-text">
                                 <img class="img-fluid" src="images/arrow-right.png" />
                             </a>
+                            <a href="#" class="button-default d-block text-center" data-toggle="modal" data-target="#ebrochure">Submit</a>
                             <a href="invitation.pdf" class="button-download">Download Invitation</a>
                             <div class="modal fade" id="ebrochure">
                                 <div class="modal-dialog modal-dialog-centered">
