--- a/templates/template_birthday_1/index.html
+++ b/templates/template_birthday_1/index.html
@@ -311,7 +311,7 @@
                                     <a class="button-pink bs ma-m" data-toggle="modal" data-target="#ebrochure" >SUBMIT</a>
                                     <!-- Popup Wishlist -->
                                     <div class="modal fade" id="ebrochure">
-                                        <div class="modal-dialog modal-dialog-centered modal-lg">
+                                        <div class="modal-dialog modal-dialog-centered modal-xl">
                                             <div class="modal-content">
                                                 <div class="container-fluid">
                                                     <div class="row">
@@ -320,17 +320,22 @@
                                                             <img class="img-fluid d-block d-lg-none w-lg-100p" src="images/popup-02.png" />
                                                             <div class="boxc">
                                                                 <h2 class="font-yellow mb-lg-5p">
-                                                                    <span>THANK YOU</span><br />
-                                                                    FOR PARTICIPATING
+                                                                    <span>SEE YOU</span><br />
+                                                                    AT THE CELEBRATION
                                                                 </h2>
                                                                 <p>
-                                                                    We will saving your seat for<br />
-                                                                    your attendance, looking<br />
-                                                                    forward to see you at<br />
-                                                                    my Birthday Party!
+                                                                    Your presence on my celebration means a lot<br>
+                                                                    to me and my family. Cannot wait to see you<br>
+                                                                    there! Don’t forget to select the gift you may<br>
+                                                                    give from my wishlist, so others will not need<br>
+                                                                    to give the same gift as you.
                                                                 </p>
                                                                 <p>Love, Diana Ross</p>
-                                                                <a class="button-wishlist" class="close" data-dismiss="modal">CLOSE</a>
+                                                                        <div class="row wrap-button">
+                                                                            <a href="wishlist.html" class="button-yellow">GIFT<br>
+                                                                                WISHLIST</a>
+                                                                            <a class="button-wishlist" class="close" data-dismiss="modal">CLOSE</a>
+                                                                        </div>
                                                             </div>
                                                         </div>
                                                     </div>
