--- a/templates/template_birthday_1/wishlist.html
+++ b/templates/template_birthday_1/wishlist.html
@@ -20,98 +20,84 @@
 </head>
 <body>
     <div id="wishlist">
-        <!-- NAVBAR -->
-        <nav>
-            <div class="container-fluid animated fadeInUp">
-                <div class="row d-none d-lg-block">
-                    <div class="offset-lg-3 col-lg-9 pr-lg-0">
-                        <ul class="menu">
-                            <li><a href="index.html">HOME</a></li>
-                            <li><a href="index.html#about">ABOUT</a></li>
-                            <li><a href="index.html#dateandplace">DATE & PLACE</a></li>
-                            <li><a href="index.html#gallery">GALLERY</a></li>
-                            <li><a href="index.html#rsvp">RSVP</a></li>
-                            <li><a href="wishlist.html">WISHLIST</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="row d-lg-none pt-3">
-                    <div class="offset-8 col-4 text-right">
-                        <h3 class="text-white">
-                            <i class="fa fa-bars"></i>
-                        </h3>
-                    </div>
-                    <div class="side-nav">
-                        <div class="close-div text-right p-3">
-                            <i class="fa fa-times" aria-hidden="true"></i>
-                        </div>
-                        <ul class="list-unstyled">
-                            <li><a href="index.html">HOME</a></li>
-                            <li><a href="index.html#about">ABOUT</a></li>
-                            <li><a href="index.html#dateandplace">DATE & PLACE</a></li>
-                            <li><a href="index.html#gallery">GALLERY</a></li>
-                            <li><a href="index.html#rsvp">RSVP</a></li>
-                            <li><a href="wishlist.html">WISHLIST</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </nav>
         <!-- Section WISHLIST -->
         <section id="content-wishlist">
             <img class="img-fluid w-lg-100p bg1 d-none d-lg-block move-up" src="images/background-03.png" />
             <img class="img-fluid w-lg-100p bg2 d-none d-lg-block move-up" src="images/background-04.png" />
-            <div class="container-fluid pt-m-20p pb-m-20p pl-m-10p pr-m-10p pt-lg-15p pb-lg-10p pl-lg-5p pr-lg-5p">
+            <div class="container-fluid pt-m-20p pb-m-20p pl-m-10p pr-m-10p pt-lg-20p pb-lg-10p pl-lg-5p pr-lg-5p">
                 <div class="row">
-                    <div class="col-lg-3 mb-lg-10p animated fadeInLeft">
+                    <div class="col-lg-4 mb-lg-10p animated fadeInLeft">
                         <h2 class="font-yellow mb-lg-10p">
                             <span>GIFT IDEAS</span><br />
                             FOR ME
                         </h2>
                         <div class="w-lg-100p">
                             <p>
-                                If you are confused of what to get for my
-                                birthday, here’s a list of the things I
-                                might need.
+                                You can choose and select gift ideas from the list below<br>
+                                so others will not need to give the same gift.<br>
+                                <br>
+                                It is not mandatory to give things from this list. If you’re<br>
+                                prefer to give other gift please select the “others”<br>
+                                option. Your presence is much more important and<br>
+                                needed.<br>
                             </p>
                         </div>
                     </div>
-                    <div class="col-lg-9 mb-lg-10p pl-lg-3p">
+                    <div class="col-lg-8 mb-lg-5p px-5">
                         <div class="row">
                             <div class="col-6 col-lg-4 mb-lg-5p text-center animated fadeInUp">
                                 <a href="" data-toggle="modal" data-target="#wishlist-popup">
-                                    <img class="img-fluid w-lg-100p mb-lg-5p" src="images/wishlist-01.png" />
-                                    <p>SHOES</p>
+                                    <img class="img-fluid w-lg-100p mb-lg-5p" src="images/ornament-banner-02.png" />
+                                    <p class="title">SHOES</p>
                                 </a>
                             </div>
                             <div class="col-6 col-lg-4 mb-lg-5p text-center animated fadeInUp">
                                 <a href="" data-toggle="modal" data-target="#wishlist-popup">
-                                    <img class="img-fluid w-lg-100p mb-lg-5p" src="images/wishlist-02.png" />
-                                    <p>ACCESSORIES</p>
+                                    <img class="img-fluid w-lg-100p mb-lg-5p" src="images/ornament-about-03.png" />
+                                    <p class="title">ACCESSORIES</p>
                                 </a>
                             </div>
                             <div class="col-6 col-lg-4 mb-lg-5p text-center animated fadeInUp">
                                 <a href="" data-toggle="modal" data-target="#wishlist-popup">
-                                    <img class="img-fluid w-lg-100p mb-lg-5p" src="images/wishlist-03.png" />
-                                    <p>SWEATER</p>
+                                    <img class="img-fluid w-lg-100p mb-lg-5p" src="images/ornament-banner-01.png" />
+                                    <p class="title">SWEATER</p>
                                 </a>
                             </div>
                             <div class="col-6 col-lg-4 mb-lg-5p text-center animated fadeInUp">
                                 <a href="" data-toggle="modal" data-target="#wishlist-popup">
-                                    <img class="img-fluid w-lg-100p mb-lg-5p" src="images/wishlist-04.png" />
-                                    <p>SELF CARE PRODUCTS</p>
+                                    <img class="img-fluid w-lg-100p mb-lg-5p" src="images/ornament-about-03.png" />
+                                    <p class="title">MAKEUP</p>
                                 </a>
                             </div>
                             <div class="col-6 col-lg-4 mb-lg-5p text-center animated fadeInUp">
                                 <a href="" data-toggle="modal" data-target="#wishlist-popup">
-                                    <img class="img-fluid w-lg-100p mb-lg-5p" src="images/wishlist-05.png" />
-                                    <p>TUMBLR</p>
+                                    <img class="img-fluid w-lg-100p mb-lg-5p" src="images/ornament-banner-01.png" />
+                                    <p class="title">SKIN CARE</p>
                                 </a>
                             </div>
                             <div class="col-6 col-lg-4 mb-lg-5p text-center animated fadeInUp">
                                 <a href="" data-toggle="modal" data-target="#wishlist-popup">
-                                    <img class="img-fluid w-lg-100p mb-lg-5p" src="images/wishlist-06.png" />
-                                    <p>SPORTS WEAR</p>
+                                    <img class="img-fluid w-lg-100p mb-lg-5p" src="images/ornament-banner-02.png" />
+                                    <p class="title">STUFF FOR
+                                        MY DOGGO</p>
+                                </a>
+                            </div>
+                            <div class="col-6 col-lg-4 mb-lg-5p text-center animated fadeInUp">
+                                <a href="" data-toggle="modal" data-target="#wishlist-popup">
+                                    <img class="img-fluid w-lg-100p mb-lg-5p" src="images/ornament-banner-01.png" />
+                                    <p class="title">PINK CARDIGAN</p>
+                                </a>
+                            </div>
+                            <div class="col-6 col-lg-4 mb-lg-5p text-center animated fadeInUp">
+                                <a href="" data-toggle="modal" data-target="#wishlist-popup">
+                                    <img class="img-fluid w-lg-100p mb-lg-5p" src="images/ornament-banner-02.png" />
+                                    <p class="title">HEADBANDS</p>
+                                </a>
+                            </div>
+                            <div class="col-6 col-lg-4 mb-lg-5p text-center animated fadeInUp">
+                                <a href="" data-toggle="modal" data-target="#wishlist-popup">
+                                    <img class="img-fluid w-lg-100p mb-lg-5p" src="images/ornament-banner-01.png" />
+                                    <p class="title">STATIONERY</p>
                                 </a>
                             </div>
                             <!-- Popup Wishlist -->
@@ -121,21 +107,64 @@
                                         <div class="container-fluid">
                                             <div class="row">
                                                 <div class="col-lg-12 pl-lg-0 pr-lg-0">
-                                                    <img class="img-fluid d-none d-lg-block w-lg-100p" src="images/popup-01.png" />
+                                                    <img class="img-fluid d-none d-lg-block w-lg-100p" src="images/popup-new-bg-04.png" />
                                                     <img class="img-fluid d-block d-lg-none w-lg-100p" src="images/popup-02.png" />
                                                     <div class="boxc">
-                                                        <h2 class="font-yellow mb-lg-5p">
-                                                            <span>THANK YOU</span><br />
-                                                            FOR PARTICIPATING
+                                                        <h2 class="font-green mb-lg-5p">
+                                                            YOU CHOOSE TO<br>
+                                                            GIVE THIS GIFT:
                                                         </h2>
+                                                        <h1 class="font-green font-weight-bold">
+                                                            SHOES
+                                                        </h1>
+                                                        <hr class="w-lg-15p mb-lg-5 mt-lg-4 mx-auto">
                                                         <p>
-                                                            We will saving your seat for<br />
-                                                            your attendance, looking<br />
-                                                            forward to see you at<br />
-                                                            my Birthday Party!
+                                                            Please input your email address<br>
+                                                            to continue the confirmation*
                                                         </p>
-                                                        <p>Love, Diana Ross</p>
-                                                        <a class="button-wishlist" class="close" data-dismiss="modal">CLOSE</a>
+                                                        <div class="form-group py-lg-3">
+                                                            <input type="text" name="your-name" class="form-control w-lg-30p mx-auto text-center" placeholder="Ex : johnsmith@gmail.com" required="">
+                                                        </div>
+                                                        <div class="w-lg-35p mx-auto">
+                                                        <div class="row">
+                                                            <a class="button-green" class="close" data-dismiss="modal"  data-toggle="modal" data-target="#confirm-popup">CONFIRM
+                                                                THE GIFT</a>
+                                                            <a class="button-wishlist" class="close" data-dismiss="modal">CLOSE</a>
+                                                        </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Popup Wishlist -->
+                            <div class="modal fade" id="confirm-popup">
+                                <div class="modal-dialog modal-dialog-centered modal-lg">
+                                    <div class="modal-content">
+                                        <div class="container-fluid">
+                                            <div class="row">
+                                                <div class="col-lg-12 pl-lg-0 pr-lg-0">
+                                                    <img class="img-fluid d-none d-lg-block w-lg-100p" src="images/popup-new-bg-04-03.png" />
+                                                    <img class="img-fluid d-block d-lg-none w-lg-100p" src="images/popup-02.png" />
+                                                    <div class="boxc">
+                                                        <h2 class="font-green">
+                                                            <span class="font-weight-bold">
+                                                                THANK YOU
+                                                            </span><br>
+                                                            FOR YOUR GIFT
+                                                        </h2>
+                                                        <p class="my-lg-4">
+                                                            Remember, your presence is<br>
+                                                            much more important and<br>
+                                                            needed!
+                                                        </p>
+                                                        <div class="w-lg-35p mx-auto">
+                                                            <div class="row">
+                                                                <a class="button-wishlist" class="close" data-dismiss="modal">CLOSE</a>
+                                                            </div>
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -145,9 +174,11 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-12 text-center slideanim">
-                        <p>You can <span>choose and select gift ideas</span> from the list above so others will not need to give the same gift.</p>
-                        <p>However, It is not mandatory for you to select one from the list. <span>Your presence is much more important and needed.</span></p>
+                    <div class="col-lg-8 offset-lg-4 text-center slideanim">
+                        <p class="mb-4">
+                            Didn’t find one you prefer? click this:
+                        </p>
+                        <a href="#" class="button-cyan">OTHERS</a>
                     </div>
                 </div>
             </div>
