--- a/templates/template_wedding_4/index.html
+++ b/templates/template_wedding_4/index.html
@@ -107,7 +107,7 @@
                         <img data-aos="fade-up" data-aos-once="true" data-aos-offset="-1400" class="img-fluid w-lg-100p d-none d-lg-block z-index-1 position-relative" src="images/images-02.png" />
                     </div>
                     <div class="col-lg-5 pt-m-20p pb-m-20p pl-m-10p pr-m-10p pt-lg-10p brief">
-                        <i>Classically Elegant Wedding</i>
+                        <!-- <i>Classically Elegant Wedding</i> -->
                         <h3>Emma & Norman</h3>
                         <p>Our journey has been so great ever since we met back in 2010, we realize how much we need each other side by side and we will never ever take things for granted, EVER! So we wanted to make sure to seal our relationship and tie the knot! For as you know, we’ve been in a relationship for almost 8 years now, we’ve been through thick and thin together, always got each other’s back. Norman always the one that encourages Emma to create things, and Emma always been the one who supports Norman in his journey. And YOU, always been a special one to us and we hope you will celebrate with us to create an unforgettable moment of all.</p>
                     </div>
